tested and made fines changes to the routes